GH-256 Replace Jena with RDF4J in the CORE